--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Primeiro Projeto Site com Repositório</h1>
     <br>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores enim error nam nostrum, eligendi quod? Reprehenderit mollitia ex necessitatibus illum sequi provident iure aperiam qui excepturi id, iusto eaque eos!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed tempora quaerat neque blanditiis, mollitia porro, quasi maiores ipsum nobis ratione ad quo laudantium odio suscipit at, id dolor ducimus aut.</p>
 </body>
 </html>
